force-app/main/default/objects/EmailMessage/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <description>Custom CC Address field to keep null</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>