force-app/main/default/objects/EmailMessage/fields/IsAsyncLogic__c.field-meta.xml
<CustomField>
    <fullName>IsAsyncLogic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAsyncLogic</label>
    <type>Checkbox</type>
</CustomField>