force-app/main/default/objects/EmailMessage/fields/Power_of_One_Email__c.field-meta.xml
<CustomField>
    <fullName>Power_of_One_Email__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power of One - Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>