force-app/main/default/objects/EmailMessage/fields/QCC_Has_Attachment__c.field-meta.xml
<CustomField>
    <fullName>QCC_Has_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for handling the Attachments when cloning sensitive Parent Case email attachments to child sensitive case. Jira- CRM-5051</description>
    <label>QCC Has Attachment</label>
    <type>Checkbox</type>
</CustomField>