force-app/main/default/objects/EmailMessage/fields/QCC_Is_Delete_From_Flow__c.field-meta.xml
<CustomField>
    <fullName>QCC_Is_Delete_From_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>While creating the sensitive case record, need to remove the Email Message record for parent case. Jira- CRM-5051</description>
    <label>QCC Is Delete From Flow</label>
    <type>Checkbox</type>
</CustomField>