force-app/main/default/objects/EmailMessage/fields/QCC_Parent_Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>QCC_Parent_Email_Message_Id__c</fullName>
    <description>For Storing the Parent Email message id, while creating sensitive case with Email attachments.
Jira-CRM-5051</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QCC Parent Email Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>