force-app/main/default/objects/EmailMessage/fields/QCC_TECH_Email_Tab__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_Email_Tab__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QCC TECH Email Tab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>