force-app/main/default/objects/EmailMessage/fields/QCC_Tech_Is_Internal_Email__c.field-meta.xml
<CustomField>
    <fullName>QCC_Tech_Is_Internal_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to determine if the Email is for Internal and coming from Qantas Correspondence</description>
    <label>QCC Tech Is Internal Email</label>
    <type>Checkbox</type>
</CustomField>