force-app/main/default/objects/EmailMessage/fields/Responded__c.field-meta.xml
<CustomField>
    <fullName>Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC this will be true when the department receives the email and responds back to the query</description>
    <label>Responded</label>
    <type>Checkbox</type>
</CustomField>