force-app/main/default/objects/EmailMessage/fields/TECH_FromChatter__c.field-meta.xml
<CustomField>
    <fullName>TECH_FromChatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: Backend flag to identify that the email is sent from Chatter to not auto close the Case</description>
    <label>TECH From Chatter</label>
    <type>Checkbox</type>
</CustomField>