force-app/main/default/objects/EmailMessage/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>To Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>casaqfin@emirates.com</fullName>
                <label>CASA - QF (IN) &lt;casaqfin@emirates.com&gt;</label>
            </value>
            <value>
                <fullName>customercare@qantastravelmoney.com</fullName>
                <label>Cash Card&lt;customercare@qantastravelmoney.com&gt;</label>
            </value>
            <value>
                <fullName>IFSSUPPORT@qantas.com.au</fullName>
                <label>Catering SHR IFS SUPPORT&lt;IFSSUPPORT@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>ccexec@qantas.com.au</fullName>
                <label>Customer Care Advocate Team  &lt;ccexec@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>customerjourney@qantas.com.au</fullName>
                <label>SHR Customer Journey &lt;customerjourney@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>EU Compensation EC261/2004 &lt;EUDISPUTERESOLUTION@qantas.com.au&gt;</fullName>
                <label>EUDISPUTERESOLUTION@qantas.com.au</label>
            </value>
            <value>
                <fullName>foodtech@qantas.com.au</fullName>
                <label>Food Poisoning Investigations &lt;foodtech@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>frequent_flyer@qantas.com.au</fullName>
                <label>Frequent Flyer &lt;frequent_flyer@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>entertainment@qantas.com.au</fullName>
                <label>Inflight Entertainment (IFE)&lt;entertainment@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>exec.case@jetstar.com</fullName>
                <label>Jetstar Executive Relations &lt;exec.case@jetstar.com&gt;</label>
            </value>
            <value>
                <fullName>QFCC.Escalations@Jetstar.com</fullName>
                <label>Jetstar High Priority &lt;QFCC.Escalations@Jetstar.com&gt;</label>
            </value>
            <value>
                <fullName>rania.jones@qantas.com.au</fullName>
                <label>Legal Issues-Rania Jones  &lt;rania.jones@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>publicaf@qantas.com.au</fullName>
                <label>Media &lt;publicaf@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>#Media_Team@qantas.com.au</fullName>
                <label>Media - Distribution List &lt;#Media_Team@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>onlinesalesqueries@qantas.com.au</fullName>
                <label>Onlines Sales Queries &lt;onlinesalesqueries@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>hello@qantasassure.com</fullName>
                <label>QantasAssure Insurance&lt;hello@qantasassure.com&gt;</label>
            </value>
            <value>
                <fullName>MobileApp@qantas.com.au</fullName>
                <label>QF Mobile App Support &lt;MobileApp@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>ancillaries@qantas.com.au</fullName>
                <label>SHR Ancillaries &lt;ancillaries@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>shrawardsproductspecialists@qantasloyalty.com</fullName>
                <label>SHR AwardsProductSpecialists  &lt;shrawardsproductspecialists@qantasloyalty.com&gt;</label>
            </value>
            <value>
                <fullName>cabincrewfeedback@qantas.com.au</fullName>
                <label>SHR CABIN CREW FEEDBACK &lt;cabincrewfeedback@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>shrccreq@qantas.com.au</fullName>
                <label>Shr CC REQ - Admin &lt;shrccreq@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>loyaltycustomerservice@qantasloyalty.com.au</fullName>
                <label>SHR LOYALTY CUSTOMER SERVICE &lt;loyaltycustomerservice@qantasloyalty.com.au&gt;</label>
            </value>
            <value>
                <fullName>PICS@qantas.com.au</fullName>
                <label>Shr PICS &lt;PICS@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>platinumone@qantas.com.au</fullName>
                <label>SHR PLATINUM ONE &lt;platinumone@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>Salesinitatives@qantas.com.au</fullName>
                <label>Shr Sales Initiatives &lt;Salesinitatives@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>security@qantas.com.au</fullName>
                <label>Shr Security &lt;security@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>socialmediaakl@qantas.com.au</fullName>
                <label>SHR Social Media AKL &lt;socialmediaakl@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>specialhandling@qantas.com.au</fullName>
                <label>SHR SPHL &lt;specialhandling@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>sponsorships@qantas.com.au</fullName>
                <label>Sponsorship Requests &lt;sponsorships@qantas.com.au&gt;</label>
            </value>
            <value>
                <fullName>paxcti@qantas.com.au</fullName>
                <label>Tax invoices &lt;paxcti@qantas.com.au&gt;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>