force-app/main/default/objects/EmailMessage/validationRules/QAC_Restrict_From_Email_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>QAC_Restrict_From_Email_Address</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
(FromAddress &lt;&gt; &quot;qantasagencyconnectau@qantas.com.au&quot;),
(Parent.RecordType.DeveloperName &lt;&gt; &quot;Ticketing_Authority&quot;),
(Parent.RecordType.DeveloperName &lt;&gt; &quot;SHR_QIS_Sales_Support&quot;),
OR(
$Profile.Name == &apos;Qantas Service Lightning&apos;, $Profile.Name == &apos;Qantas Agency Connect and Agency Sales&apos;
)
)</errorConditionFormula>
    <errorMessage>Please select email address as Qantas Agency Connect AU &lt;qantasagencyconnectau@qantas.com.au&gt;</errorMessage>
</ValidationRule>