force-app/main/default/objects/EmailMessage/validationRules/QAC_Restrict_From_Email_Address_NZ.validationRule-meta.xml
<ValidationRule>
    <fullName>QAC_Restrict_From_Email_Address_NZ</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR($Profile.Name = &quot;QL_Qantas_Sales&quot;,$User.Profile_Name__c =&apos;Sales and Distribution-Sales&apos;,$User.Profile_Name__c =&apos;Sales and Distribution-Distribution&apos;,$Profile.Name = &quot;QL_Sales&quot;,
$Permission.Mindpearl_Permission), 
FromAddress &lt;&gt; &quot;qantasagencyconnectnz@qantas.com.au&quot;,
Parent.RecordType.DeveloperName = &quot;QIC_Service_request&quot;,
Parent.Account_Country__c = &quot;NZ&quot;
)</errorConditionFormula>
    <errorMessage>Please select email address as Qantas Agency Connect NZ &lt;qantasagencyconnectnz@qantas.com.au&gt;</errorMessage>
</ValidationRule>