force-app/main/default/objects/EmailMessage/validationRules/QAC_UK_Restrict_From_Email_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>QAC_UK_Restrict_From_Email_Address</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR($Profile.Name = &quot;QL_Qantas_Sales&quot;,$User.Profile_Name__c =&apos;Sales and Distribution-Sales&apos;,$User.Profile_Name__c =&apos;Sales and Distribution-Distribution&apos;,$Profile.Name = &quot;QL_Sales&quot;,
$Permission.Mindpearl_Permission),
FromAddress &lt;&gt; &quot;qantasagencyconnectuk@qantas.com.au&quot;,
Parent.RecordType.Name = &quot;Service Request&quot;,
Parent.Account_Country__c = &quot;GB&quot;
)</errorConditionFormula>
    <errorMessage>Please select email address as Qantas Agency Connect UK &lt;qantasagencyconnectuk@qantas.com.au&gt;</errorMessage>
</ValidationRule>